[package]
name = "proto-token-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.3"
prost-types = "0.11.2"
chrono = "0.4.22"
base64 = "0.13.1"
base64-url = "1.4.13"
openssl = { version = "0.10.43", optional = true }
hex = "0.4.3"

[build-dependencies]
prost-build = { version = "0.11.3"}

[features]
crypto_openssl = ["openssl"]
