[package]
name = "proto-token-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
chrono = "0.4.22"
base64 = "0.21.0"
base64-url = "2.0.0"
hex = "0.4.3"
openssl = { version = "0.10.43", optional = true }
jwt-compact = { version = "0.7.0", features = ["ed25519-compact"], optional = true }
serde_json = { version="1.0.96", default-features = false, features = ["alloc"], optional = true}
serde = { version = "1.0.160", default-features = false, features = ["derive"] , optional = true}

[build-dependencies]
protoc-bin-vendored = "3.0.0"
prost-build = "0.11.9"

[features]
openssl = ["dep:openssl"]
wasm = ["jwt-compact", "serde", "serde_json"]
